@@ -170,7 +170,7 @@ print_usage(void)
            "  h  display this help and exit\n"
            "  V  display version information and exit\n"
            "OPTION can be:\n"
-           "  #  # can be 6, 7, 8, 9, 95, 10, 11, 12, 125, or 128 (required)\n"
+           "  #  # can be 6, 7, 8, 9, 95, 10, 11, 12, 125, 128, or 13 (required)\n"
            "Report bugs to <" PACKAGE_BUGREPORT ">.\n", argv0);
 }
 
@@ -201,6 +201,7 @@ main(int argc, char* argv[])
     case 12:
     case 125:
     case 128:
+    case 13:
         module = &th10_ecl;
         break;
     default:
